--- a/index.html
+++ b/index.html
@@ -128,52 +128,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[01/2024] I will serve as a reviewer for ACM SIGKDD 2024. </li>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
-	<li type="circle">[12/2023] I will serve as a reviewer for ICML, 2024. </li>
-	<li type="circle">[12/2023] I will serve as a reviewer for IJCAI, 2024. </li>
-	<li type="circle">[12/2023] A paper is accepted by TKDD. </li>
-	<li type="circle">[12/2023] I will serve as a reviewer for the Journal of Data-centric Machine Learning Research. </li>
-	<li type="circle">[11/2023] I will serve as a panelist for an NSF panel. </li>
-	<li type="circle">[11/2023] A recent work (fairness in domain generalization) has been uploaded to Arxiv (arXiv:2311.13816). </li>
-	<li type="circle">[11/2023] I will serve as one of the Co-PIs for the Center on Responsible artificial intelligence and Governance (CRaiG), supported by the NSF IUCRC program. </li>
-	<li type="circle">[11/2023] I will serve as one of the organizers for the 3rd Southwest Data Science Conference, 2024. </li>
-	<li type="circle">[11/2023] A paper is accepted by NeurIPS workshop AFT. </li>
-	<li type="circle">[10/2023] I will serve as a reviewer for WWW 2024. </li>
-	<li type="circle">[10/2023] I was invited to give an academic talk at the Data Science Seminar by Baylor University, Waco, TX. </li>
-	<li type="circle">[10/2023] I will serve as a Program Committee for PAKDD 2024. </li>
-	<li type="circle">[10/2023] I will serve as a reviewer for NeurIPS Worksop on Diffusion Models 2023. </li>
-	<li type="circle">[09/2023] A recent work (counterfactual fairness in time series) has been uploaded to Arxiv (arXiv:2309.13005). </li>
-	<li type="circle">[09/2023] A recent work (semantic OOD detection in unseen domains) has been uploaded to Arxiv (arXiv:2309.10209). </li>
-	<li type="circle">[09/2023] I will serve as a reviewer for AAAI 2024. </li>
-	<li type="circle">[09/2023] I will serve as a reviewer for ICASSP 2024. </li>
-	<li type="circle">[09/2023] I will serve as a PC member for SDM 2024. </li>
-	<li type="circle">[09/2023] I will serve as a reviewer for AISTATS 2024. </li>
-	<li type="circle">[09/2023] I will serve as a reviewer for ICLR 2024. </li>
-	<li type="circle">[08/2023] Two papers are accepted by CIKM 2023. </li>
-	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
-	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
-	<li type="circle">[07/2023] I was invited to give an academic talk by AI TIME, Beijing, China. </li>
-	<li type="circle">[05/2023] I will serve as a reviewer for the SPIGM workshop at ICML 2023. </li>
-	<li type="circle">[05/2023] I was invited to give an academic talk by Yunnan University, Kunming, China. </li>
-	<li type="circle">[05/2023] I was invited to give an academic talk by the Southwestern University of Finance and Economics, Chengdu, China. </li>
-	<li type="circle">[05/2023] I was invited to give an academic talk by AI TIME, Beijing, China. </li>
-	<li type="circle">[05/2023] One paper was accepted by KDD 2023. </li>
-	<li type="circle">[05/2023] I will serve as a PC member for CIKM 2023. </li>
-	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
-	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
-	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
-	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany, NY. </li>
-	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville, TN. </li>
-	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizer and chair. </li>
-	<li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
-	<li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
-	<li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
-	<li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
-	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Waco, TX. </li>
-	<li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
-	<li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford, MS. </li>
-	<li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
-	<li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
     </ul>
 
 
@@ -365,7 +321,7 @@
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
-		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
+		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2024.</li>
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
