--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
 	</ul>
   <h3>Journal Reviewer</h3>
     	<ul>
+		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2024. </li>
 		<li type="disc"> [Reviewer] Journal of Data-centric Machine Learning Research (DMLR), 2023. </li>
 		<li type="disc"> [Reviewer] ACM Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
-		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2023. </li>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
@@ -365,6 +365,7 @@
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Mentor at KDD-UC] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
+		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
 	</ul>
 
 
