--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 <h2>Biography</h2>
 	<p style="text-align:justify;">
 		Dr. Chen Zhao is an Assistant Professor in the Department of Computer Science at Baylor University. 
-		Prior to joining Baylor, he was a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. 
-		He earned his Ph.D. degree in Computer Science from <a href="https://www.utdallas.edu/">the University of Texas at Dallas</a> in 2021 advised by Dr. <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. 
-		He received dual M.S. degrees in Computer Science and Biomedical Science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a> in 2016. 
+		Prior to joining Baylor, he was a senior R&D computer vision engineer at Kitware Inc. 
+		He earned his Ph.D. degree in Computer Science from The University of Texas at Dallas (UTD) in 2021, advised by Dr. <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. 
+		He received dual M.S. degrees in Computer Science and Biomedical Science from the University at Albany, SUNY, and Albany Medical College in 2016. 
 		<br>
 		<br>
 		His research focuses on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
-		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, ICDM, ICASSP, etc. 
-		He has served as a PC member for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, etc.
+		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, ICDM, TKDD, ICASSP, <em>etc</em>. 
+		He has served as a PC member for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, ICLR, <em>etc</em>.
 	</p>
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
