--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[01/2024] I will serve as a reviewer for ACM SIGKDD 2024. </li>
+	<li type="circle">[01/2024] I will serve as a PC member for ACM SIGKDD 2024. </li>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
     </ul>
 
