--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[02/2024] Our new survey paper (Fairness in Distribution Shifts) is now available on ArXiv. </li>
 	<li type="circle">[01/2024] I will serve as a PC member for ACM SIGKDD 2024. </li>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
     </ul>
@@ -137,6 +138,11 @@
 
 <strong>2024</strong>
 <ol>
+	<li>
+		<strong>[ArXiv]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327.pdf">PDF</a></br>
+		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (<sup>*</sup>Equal contribution)<br/>
+		<em>ArXiv preprint, 2402.01327</em>, 2024
+	</li>
 	<li>
 		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. (To appear)</br>
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
