--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[01/2024] I will serve as a PC member for IEEE Bigdata 2024. </li>
 	<li type="circle">[02/2024] Our new survey paper (Fairness in Distribution Shifts) is now available on ArXiv. </li>
 	<li type="circle">[01/2024] I will serve as a PC member for ACM SIGKDD 2024. </li>
 	<li type="circle">[01/2024] I will serve as a panelist for an NSF panel. </li>
@@ -326,13 +327,13 @@
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
 		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2024.</li>
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM), 2022-2023.</li>
-		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2023.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM), 2021-2023.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM), 2022.</li>
 		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC), 2023.</li>
