--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<em>ArXiv preprint, 2402.01327</em>, 2024
 	</li>
 	<li>
-		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. (To appear)</br>
+		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.12319.pdf">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
 		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
 	</li>
