--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[03/2024] I will serve as the Co-Chair of the IEEE BigData 2024 Big Data Cup Challenges. </li>      
 	<li type="circle">[03/2024] I will serve as a PC member for CIKM 2024. </li>  
 	<li type="circle">[02/2024] I will serve as a PC member for ECML PKDD 2024. </li>    
 	<li type="circle">[02/2024] I will serve as a PC member for IEEE Bigdata 2024. </li>
@@ -365,6 +366,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Co-Chair</font>] IEEE BigData 2024 Big Data Cup Challenges, 2024.</li>
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023 - 2024.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] The Southwest Data Science Conference, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
