--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@
 	<ul>
 		<li type="disc"> [<font color=red>Co-Chair</font>] IEEE BigData 2024 Big Data Cup Challenges, 2024.</li>
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023 - 2024.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>] The Southwest Data Science Conference, 2024.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
-		<li type="disc"> [Mentor at KDD-UC] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
+		<li type="disc"> [Mentor at KDD-Undergraduate Consortium] <a href="https://kdd.org/kdd2022/kdd-uc.html">ACM Conference on Knowledge Discovery and Data Mining (KDD)</a>, 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
 	</ul>
