--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[03/2024] One paper is accepted by IGARSS 2024. </li> 
 	<li type="circle">[03/2024] I will serve as the Co-Chair of the IEEE BigData 2024 Big Data Cup Challenges. </li>      
 	<li type="circle">[03/2024] I will serve as a PC member for CIKM 2024. </li>  
 	<li type="circle">[02/2024] I will serve as a PC member for ECML PKDD 2024. </li>    
@@ -142,6 +143,11 @@
 
 <strong>2024</strong>
 <ol>
+	<li>
+		<strong>[IGARSS'24]</strong> Uncovering Bias in Building Damage Assessment from Satellite Imagery. (To appear)</br>
+		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
+		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
+	</li>
 	<li>
 		<strong>[ArXiv]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327.pdf">PDF</a></br>
 		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (<sup>*</sup>Equal contribution)<br/>
