--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[03/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] One paper is accepted by IGARSS 2024. </li> 
 	<li type="circle">[03/2024] I will serve as the Co-Chair of the IEEE BigData 2024 Big Data Cup Challenges. </li>      
 	<li type="circle">[03/2024] I will serve as a PC member for CIKM 2024. </li>  
@@ -373,7 +374,7 @@
   <h3>Others</h3>
 	<ul>
 		<li type="disc"> [<font color=red>Co-Chair</font>] IEEE BigData 2024 Big Data Cup Challenges, 2024.</li>
-		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023 - 2024.</li>
+		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023, 2024(x2).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
