--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	</li>
 	<li>
 		<strong>[CIKM'23]</strong> Adaptation Speed Analysis for Fairness-aware Causal Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2308.16879.pdf">PDF</a></br>
-		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao and Haifeng Chen.<br/>
+		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Haifeng Chen.<br/>
 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2023
 	</li>
 	<li>
