--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Ethical AI has been accepted by KDD 2024. </li>
 	<li type="circle">[03/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] One paper is accepted by IGARSS 2024. </li> 
 	<li type="circle">[03/2024] I will serve as the Co-Chair of the IEEE BigData 2024 Big Data Cup Challenges. </li>      
@@ -373,13 +374,19 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshop on Ethical Artificial Intelligence (EAI): Methods and Applications, 
+			<a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD'22</a>, 
+			<a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">KDD'23</a>, 
+			KDD'24.
+		</li>
 		<li type="disc"> [<font color=red>Co-Chair</font>] IEEE BigData 2024 Big Data Cup Challenges, 2024.</li>
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023, 2024(x2).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
+			<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
+			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>.
+		</li>
 		<li type="disc"> [Mentor at KDD-Undergraduate Consortium] <a href="https://kdd.org/kdd2022/kdd-uc.html">ACM Conference on Knowledge Discovery and Data Mining (KDD)</a>, 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
