--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshop on Ethical Artificial Intelligence (EAI): Methods and Applications, 
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Ethical Artificial Intelligence (EAI): Methods and Applications, 
 			<a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD'22</a>, 
 			<a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">KDD'23</a>, 
 			KDD'24.
@@ -383,7 +383,7 @@
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023, 2024(x2).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
 			<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
 			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>.
 		</li>
