--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 			<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
 			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>.
 		</li>
-		<li type="disc"> [Mentor at KDD-Undergraduate Consortium] <a href="https://kdd.org/kdd2022/kdd-uc.html">ACM Conference on Knowledge Discovery and Data Mining (KDD)</a>, 2022.</li>
+		<li type="disc"> [Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
 	</ul>
