--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Ethical AI has been accepted by KDD 2024. </li>
+	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Uncertainty Reasoning and Quantification has been accepted by KDD 2024. </li>
 	<li type="circle">[03/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] One paper is accepted by IGARSS 2024. </li> 
 	<li type="circle">[03/2024] I will serve as the Co-Chair of the IEEE BigData 2024 Big Data Cup Challenges. </li>      
@@ -385,7 +386,8 @@
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
 			<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
-			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>.
+			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>,
+			KDD'24
 		</li>
 		<li type="disc"> [Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
