--- a/index.html
+++ b/index.html
@@ -380,15 +380,17 @@
 			<a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">KDD'23</a>, 
 			KDD'24.
 		</li>
-		<li type="disc"> [<font color=red>Co-Chair</font>] IEEE BigData 2024 Big Data Cup Challenges, 2024.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
+			<li type="disc">
+				<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
+				<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>,
+				KDD'24
+			</li>
+		</li>
+		<li type="disc"> [<font color=red>Co-Chair</font>] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/bigdatacup.html">IEEE BigData 2024 Big Data Cup Challenges</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023, 2024(x2).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
-			<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
-			<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>,
-			KDD'24
-		</li>
 		<li type="disc"> [Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
