--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 	<ul>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Ethical Artificial Intelligence (EAI): Methods and Applications, 
 			<ul>
-				<li type="square">
+				<li type="circle">
 					<a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD'22</a>, 
 					<a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">KDD'23</a>, 
 					KDD'24.
@@ -386,7 +386,7 @@
 		</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
 			<ul>
-				<li type="square">
+				<li type="circle">
 					<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
 					<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>,
 					KDD'24
