--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[03/2024] Our new work (distribution shifts on graphs) is now available on ArXiv. </li>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Ethical AI has been accepted by KDD 2024. </li>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Uncertainty Reasoning and Quantification has been accepted by KDD 2024. </li>
 	<li type="circle">[03/2024] I will serve as a panelist for an NSF panel. </li>
@@ -146,6 +147,11 @@
 
 <strong>2024</strong>
 <ol>
+	<li>
+		<strong>[ArXiv]</strong> Graphs Generalization under Distribution Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2403.16334.pdf">PDF</a></br>
+		Qin Tian, Wenjun Wang, <font color=red>Chen Zhao</font><sup>*</sup>, Minglai Shao, Wang Zhang, Dong Li. <br/>
+		<em>ArXiv preprint, 2403.16334</em>, 2024
+	</li>
 	<li>
 		<strong>[IGARSS'24]</strong> Uncovering Bias in Building Damage Assessment from Satellite Imagery. (To appear)</br>
 		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
