--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] Our new work (distribution shifts on graphs) is now available on ArXiv. </li>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Ethical AI has been accepted by KDD 2024. </li>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Uncertainty Reasoning and Quantification has been accepted by KDD 2024. </li>
@@ -153,7 +154,7 @@
 		<em>ArXiv preprint, 2403.16334</em>, 2024
 	</li>
 	<li>
-		<strong>[IGARSS'24]</strong> Uncovering Bias in Building Damage Assessment from Satellite Imagery. (To appear)</br>
+		<strong>[IGARSS'24]</strong> Uncovering Bias in Building Damage Assessment from Satellite Imagery. <a class="btn btn-red" href="https://www.researchgate.net/profile/Isaac-Gerg/publication/377329316_UNCOVERING_BIAS_IN_BUILDING_DAMAGE_ASSESSMENT_FROM_SATELLITE_IMAGERY/links/65a1869fc77ed94047736f5d/UNCOVERING-BIAS-IN-BUILDING-DAMAGE-ASSESSMENT-FROM-SATELLITE-IMAGERY.pdf">PDF</a></br>
 		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
 		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
 	</li>
@@ -400,7 +401,7 @@
 			</ul>
 		</li>
 		<li type="disc"> [<font color=red>Co-Chair</font>] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/bigdatacup.html">IEEE BigData 2024 Big Data Cup Challenges</a>, 2024.</li>
-		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023, 2024(x2).</li>
+		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023(x1), 2024(x3).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
