--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] I will serve as a reviewer of the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
 	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] Our new work (distribution shifts on graphs) is now available on ArXiv. </li>
 	<li type="circle">[03/2024] We're delighted to announce that our workshop proposal on Ethical AI has been accepted by KDD 2024. </li>
@@ -371,6 +372,7 @@
   <h3>Journal Reviewer</h3>
     	<ul>
 		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2024. </li>
+		<li type="disc"> [Reviewer] Journal of Advances in Artificial Intelligence and Machine Learning, 2024. </li>
 		<li type="disc"> [Reviewer] Journal of Data-centric Machine Learning Research (DMLR), 2023. </li>
 		<li type="disc"> [Reviewer] ACM Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
