--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] One paper is accepted by IJCAI 2024. </li> 
 	<li type="circle">[04/2024] I will serve as a reviewer for the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
 	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] Our new work (distribution shifts on graphs) is now available on ArXiv. </li>
@@ -149,6 +150,11 @@
 
 <strong>2024</strong>
 <ol>
+	<li>
+		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. (To appear)</br>
+		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
+		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
+	</li>
 	<li>
 		<strong>[ArXiv]</strong> Graphs Generalization under Distribution Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2403.16334.pdf">PDF</a></br>
 		Qin Tian, Wenjun Wang, <font color=red>Chen Zhao</font><sup>*</sup>, Minglai Shao, Wang Zhang, Dong Li. <br/>
