--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	</li>
 	<li>
 		<strong>[ArXiv]</strong> Graphs Generalization under Distribution Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2403.16334.pdf">PDF</a></br>
-		Qin Tian, Wenjun Wang, <font color=red>Chen Zhao</font><sup>*</sup>, Minglai Shao, Wang Zhang, Dong Li. <br/>
+		Qin Tian, Wenjun Wang, <font color=red>Chen Zhao</font>, Minglai Shao, Wang Zhang, Dong Li. <br/>
 		<em>ArXiv preprint, 2403.16334</em>, 2024
 	</li>
 	<li>
