--- a/index.html
+++ b/index.html
@@ -392,20 +392,16 @@
 	<ul>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Ethical Artificial Intelligence (EAI): Methods and Applications, 
 			<ul>
-				<li type="circle">
-					<a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD'22</a>, 
-					<a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">KDD'23</a>, 
-					KDD'24.
-				</li>
+				<li type="circle"> <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">1st workshop</a> at KDD'22 </li>
+				<li type="circle"> <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">2nd workshop</a> at KDD'23 </li>
+				<li type="circle"> <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd workshop</a> at KDD'24 </li>
 			</ul>
 		</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Uncertainty Reasoning and Quantification in Decision Making (UDM), 
 			<ul>
-				<li type="circle">
-					<a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI'23</a>, 
-					<a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD'23</a>,
-					KDD'24
-				</li>
+				<li type="circle"> <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">1st workshop</a> at AAAI'23 </li> 
+				<li type="circle"> <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">2nd workshop</a> at KDD'23 </li>
+				<li type="circle"> <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd workshop</a> at KDD'24 </li>
 			</ul>
 		</li>
 		<li type="disc"> [<font color=red>Co-Chair</font>] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/bigdatacup.html">IEEE BigData 2024 Big Data Cup Challenges</a>, 2024.</li>
@@ -504,7 +500,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on August, 2023<br>
+				<p align="right"><font size="2">Last Updated on April, 2024<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
