--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] I am invited to give a reserch talk by Equifax Inc. </li> 
 	<li type="circle">[04/2024] One paper is accepted by IJCAI 2024. </li> 
 	<li type="circle">[04/2024] I will serve as a reviewer for the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
 	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
@@ -417,6 +418,7 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">04/2024: Equifax Inc, Equifax DnA University, Online.</li>
 		<li type="disc">10/2023: Baylor University, Data Science Seminar, Waco TX, USA.</li>
 		<li type="disc">07/2023: AI TIME, Beijing, China.</li>
 		<li type="disc">05/2023: Yunnan University, School of Information Science and Engineering, Kunming, China.</li>
@@ -438,7 +440,7 @@
 		<li type="disc">11/2021: AI TIME, Beijing, China.</li>
 		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
 	</ul>
-  <h3>Others</h3>
+<!--   <h3>Others</h3>
 	<ul>
 		<li type="disc">08/2023: ACM Conference on Knowledge Discovery and Data Mining, Long Beach, California, USA (oral and poster).</li>
 		<li type="disc">06/2023: IEEE/CVF Conference on Computer Vision and Pattern Recognition, Vancouver, Canada (poster).</li>
@@ -449,7 +451,7 @@
 		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China (oral).</li>
 		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster).</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
-	</ul>
+	</ul> -->
 
 
 <h2>Teaching</h2>
