--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<br>
 		<br>
 		His research focuses on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
-		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, ICDM, TKDD, ICASSP, <em>etc</em>. 
+		His publications have appeared in prestigious conferences and journals, including KDD, CVPR, WWW, AAAI, IJCAI, ICDM, TKDD, <em>etc</em>. 
 		He has served as a PC member for several international conferences and workshops, such as NeurIPS, KDD, AAAI, IJCAI, ICML, ICLR, <em>etc</em>.
 	</p>
 
