--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[04/2024] I am invited to give a reserch talk by Equifax Inc. </li> 
+	<li type="circle">[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
+	<li type="circle">[04/2024] I am invited to give a research talk by Equifax Inc. </li> 
 	<li type="circle">[04/2024] One paper is accepted by IJCAI 2024. </li> 
 	<li type="circle">[04/2024] I will serve as a reviewer for the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
 	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
@@ -155,6 +156,11 @@
 		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. (To appear)</br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
+	</li>
+	<li>
+		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models.</br>
+		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
+		<em>CVPR Workshop on Generative Models for Computer Vision</em>, 2024
 	</li>
 	<li>
 		<strong>[ArXiv]</strong> Graphs Generalization under Distribution Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2403.16334.pdf">PDF</a></br>
