--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] Two papes are accepted by IJCAI 2024. </li>
 	<li type="circle">[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
-	<li type="circle">[04/2024] I am invited to give a research talk by Equifax Inc. </li> 
-	<li type="circle">[04/2024] One paper is accepted by IJCAI 2024. </li> 
+	<li type="circle">[04/2024] I am invited to give a research talk by Equifax Inc. </li>  
 	<li type="circle">[04/2024] I will serve as a reviewer for the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
 	<li type="circle">[04/2024] I will serve as a panelist for an NSF panel. </li>
 	<li type="circle">[03/2024] Our new work (distribution shifts on graphs) is now available on ArXiv. </li>
@@ -152,6 +152,11 @@
 
 <strong>2024</strong>
 <ol>
+	<li>
+		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. (To appear)</br>
+		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao (equal contributions)<br/>
+		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
+	</li>
 	<li>
 		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. (To appear)</br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
