--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <ol>
 	<li>
 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. (To appear)</br>
-		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao (equal contributions)<br/>
+		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (Equal Contributions)<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 	</li>
 	<li>
@@ -177,11 +177,11 @@
 		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
 		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
 	</li>
-	<li>
+<!-- 	<li>
 		<strong>[ArXiv]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327.pdf">PDF</a></br>
 		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (<sup>*</sup>Equal contribution)<br/>
 		<em>ArXiv preprint, 2402.01327</em>, 2024
-	</li>
+	</li> -->
 	<li>
 		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.12319.pdf">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
