--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
 <h2>Teaching</h2>
   <h3>Baylor University</h3>
 	<ul>
+		<li type="disc">Fall 2024, <font color=red>Instructor</font>, DSC 3334 Algorithms and Data Structures. </li>
 		<li type="disc">Spring 2024, <font color=red>Instructor</font>, DSC 4320 Data Visualization. </li>
 		<li type="disc">Fall 2023, <font color=red>Instructor</font>, DSC 2350 Discrete Structures for Data Science. </li>
 	</ul>
