--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <ol>
 	<li>
 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. (To appear)</br>
-		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (Equal Contributions)<br/>
+		Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. (Equal Contribution)<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 	</li>
 	<li>
