--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
 	<li type="circle">[04/2024] Two papes are accepted by IJCAI 2024. </li>
 	<li type="circle">[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
 	<li type="circle">[04/2024] I am invited to give a research talk by Equifax Inc. </li>  
@@ -402,6 +403,16 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Robust Machine Learning for Distribution Shifts (RobustMLDS), 
+			<ul>
+				<li type="circle"> 1st workshop at IEEE Bigdata'24 </li>
+			</ul>
+		</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Trustworthy Machine Learning for Healthcare ((TrustML4Health), 
+			<ul>
+				<li type="circle"> 1st workshop at IEEE Bigdata'24 </li>
+			</ul>
+		</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Ethical Artificial Intelligence (EAI): Methods and Applications, 
 			<ul>
 				<li type="circle"> <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">1st workshop</a> at KDD'22 </li>
