--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[04/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
+	<li type="circle">[05/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
 	<li type="circle">[04/2024] Two papes are accepted by IJCAI 2024. </li>
 	<li type="circle">[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
 	<li type="circle">[04/2024] I am invited to give a research talk by Equifax Inc. </li>  
@@ -152,7 +152,7 @@
 <h2>Publications</h2>
 
 <strong>2024</strong>
-<ol>
+<ol>	
 	<li>
 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. (To appear)</br>
 		Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. (Equal Contribution)<br/>
@@ -164,7 +164,7 @@
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 	</li>
 	<li>
-		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models.</br>
+		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models.<a class="btn btn-red" href="https://arxiv.org/pdf/2404.17735">PDF</a></br>
 		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
 		<em>CVPR Workshop on Generative Models for Computer Vision</em>, 2024
 	</li>
