--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
 <strong>2024</strong>
 <ol>	
 	<li>
-		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. (To appear)</br>
+		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327v3">PDF</a></br>
 		Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. (Equal Contribution)<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 	</li>
 	<li>
-		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. (To appear)</br>
+		<strong>[IJCAI'24]</strong> Towards Counterfactual Fairness-aware Domain Generalization in Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.13005v2">PDF</a></br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
 	</li>
 	<li>
-		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models.<a class="btn btn-red" href="https://arxiv.org/pdf/2404.17735">PDF</a></br>
+		<strong>[CVPR'24-W]</strong> Causal Diffusion Autoencoders: Toward Representation-Enabled Counterfactual Generation via Diffusion Probabilistic Models. <a class="btn btn-red" href="https://arxiv.org/pdf/2404.17735">PDF</a></br>
 		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
 		<em>CVPR Workshop on Generative Models for Computer Vision</em>, 2024
 	</li>
