--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2024] I will serve as a PC member for ICDM 2024. </li>  
 	<li type="circle">[05/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
 	<li type="circle">[04/2024] Two papes are accepted by IJCAI 2024. </li>
 	<li type="circle">[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
@@ -373,7 +374,7 @@
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM), 2022-2024.</li>
-		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM), 2021-2023.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM), 2021-2024.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM), 2022.</li>
 		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC), 2023.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN), 2022.</li>
