--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 	<br>
 	<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
 </p>
+
+<p style="text-align:justify;background-color:#F2F3F4">
+	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<br>
+	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<br>	
+</p>
 	
 <h2>Biography</h2>
 	<p style="text-align:justify;">
