--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
 </p>
 
-<p style="text-align:justify;background-color:#F2F3F4">
+<p style="text-align:justify;background-color:#D7BDE2">
 	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
 	<br>
 	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
